--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Homepage</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+
+	<style> 
+		body {
+			background-color: yellow;
+			color: white;
+		}
+	</style>
 
 	<nav>
 		<ul>
@@ -17,9 +25,9 @@
 	</nav>
 
 
-	<h1>About my family</h1>
-	<p>Someone said, “The most important thing in the world is family and love.” I think that a lot of people agree with this statement.   My family is gorgeous. I have the best my little son, husband, mother, futher, sister. I and my husband and son live in Kharkiv. This is the most beautiful city for me in Ukraine. My futher and mother live in Lozova, this is city in Kharkiv region. My sister lives in Crimea for a long time. We visit each other very often. My parents have a dacha in the village, there is a small vegetable garden there, we all plant different vegetables together, and then we grill meat and just relax.</p>	
-	<h2>And so, briefly about who my family consists of:</h2>
+	<h1 id='My_heading'> About my family</h1>
+	<p class='Test'> Someone said, “The most important thing in the world is family and love.” I think that a lot of people agree with this statement.   My family is gorgeous. I have the best my little son, husband, mother, futher, sister. I and my husband and son live in Kharkiv. This is the most beautiful city for me in Ukraine. My futher and mother live in Lozova, this is city in Kharkiv region. My sister lives in Crimea for a long time. We visit each other very often. My parents have a dacha in the village, there is a small vegetable garden there, we all plant different vegetables together, and then we grill meat and just relax.</p>	
+	<h1>And so, briefly about who my family consists of:</h1>
 	<ul>
 		<li><b>My mother's</b> name is Svetlana. She is 58. but still looks as if she's 48. Amazing! 
 		She worked all her life as a health worker, and is now retired. But he still works as a secretary in the village council. She is very kind, will always help and listen.</li>
