added contacts and gallary

--- a/Pages/Contacts.html
+++ b/Pages/Contacts.html
@@ -4,8 +4,16 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Contacts</title>
+	<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
+
+	<style> 
+		body {
+			background-color: violet;
+			color: black;
+		}
+	</style>
 
 	<nav>
 		<ul>
@@ -19,12 +27,12 @@
 	<h2>Contacts</h2>
 
 	<ol>
-		<li><b>My mother's phone number</b> <i>+30663842189;</i></li>
-		<li><b>My father's phone number</b> <i>+380665245899;</i></li>
-		<li><b>My sister's phone number</b> <i>+79787149392;</i></li>
-		<li><b>My husband's phone number</b> <i>+380737797061;</i></li>
-		<li><b>My son's phone number</b> <i>+380977797061;</i></li>
-		<li><b>My phone number</b> <i>+380996834062.</i></li>
+		<li class="ol-padding"><b>My mother's phone number</b> <i>+30663842189;</i></li>
+		<li class="ol-padding"><b>My father's phone number</b> <i>+380665245899;</i></li>
+		<li class="ol-padding"><b>My sister's phone number</b> <i>+79787149392;</i></li>
+		<li class="ol-padding"><b>My husband's phone number</b> <i>+380737797061;</i></li>
+		<li class="ol-padding"><b>My son's phone number</b> <i>+380977797061;</i></li>
+		<li class="ol-padding"><b>My phone number</b> <i>+380996834062.</i></li>
 	</ol>
 
 	
