--- a/Pages/Gallery.html
+++ b/Pages/Gallery.html
@@ -4,8 +4,16 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Gallery</title>
+	<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
+
+	<style> 
+		body {
+			background-color: pink;
+			color: blue;
+		}
+	</style>
 
 	<nav>
 		<ul>
